# nulp-gl

./: .coverage  .gitignore  NULP_GL_My_GitHub.postman_collection.json  README.md  db.sqlite  lab2_v2.yaml  main.py  pyproject.toml  run.py  test.py
alembic/: env.py
alembic/versions/: 0290b0bcd24c_first_commit.py  11ff0b695179_.py  1ababc72c85f_.py  517750b97f9b_.py  9fc1c9f4ce74_.py
docs/: index.html  login.html  register.html
docs/assets/css/: main.css
docs/assets/js/: main.js
docs/assets/scss/: _login-register.scss  _menu.scss  _notes.scss  _popups.scss  main.scss
note_maker/: __init__.py  create_instance.py  models.py  schemas.py  test.py  urls.py
note_maker/services/: Exceptions.py  NoteLogic.py  NoteServices.py  TagServices.py  UserServices.py
sql scripts/: add_data.sql  create_table.sql  drop.sql
