[tool.poetry]
name = "nulp-gl"
version = "0.1.0"
description = ""
authors = ["Vitalii Shkliarov <shkliarov.vitalik@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.8"
Flask = "^1.1.2"
waitress = "^1.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
