[tool.poetry]
name = "nulp-gl"
version = "0.1.0"
description = ""
authors = ["Vitalii Shkliarov <shkliarov.vitalik@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.8"
Flask = "^1.1.2"
waitress = "^1.4.4"
SQLAlchemy = "^1.3.20"
marshmallow-sqlalchemy = "^0.24.1"
Flask-RESTful = "^0.3.8"
Werkzeug = "^1.0.1"
Flask-HTTPAuth = "^4.2.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
autopep8 = "^1.5.4"
alembic = "^1.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
